<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:background="@color/background_app"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="start"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/light_section">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/dark_text_color"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/actual_date"
                    android:textColor="@color/dark_text_color"
                    android:textSize="24sp"
                    android:textStyle="bold">
                </TextView>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"

            app:cardCornerRadius="16dp"
            app:cardBackgroundColor="@color/light_section">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:gravity="start">

                <TextView
                    android:id="@+id/askName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asking_name"
                    android:textSize="17sp"
                    android:textColor="@color/dark_text_color"
                    android:textStyle="bold">
                </TextView>

                <EditText
                    android:id="@+id/etUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/putName"
                    android:inputType="textPersonName"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light_text_color"
            android:backgroundTint="@color/dark_section"
            android:text="@string/btn_start">
        </Button>

        <Button
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/light_text_color"
            android:backgroundTint="@color/dark_section"
            android:text="@string/btn_goBack">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>